--- a/style.css
+++ b/style.css
@@ -155,6 +155,27 @@ header {
 .service_box > h3 {
     margin-top: 10px;
 }
+/*----------------------------------Some text-----------------------------------------*/
+
+.some_text {
+    display: flex;
+    background-color: #fff;
+    padding: 60px;
+}
+
+.some_text_left_side {
+    flex: 1.35;
+    font-size: 2.1rem;
+}
+
+.some_text_right_side {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 2.75;
+    margin: 0 50px;
+    font-size: 1.5rem;
+}
 
 /*----------------------------------MEDIA QUERIES--------------------------------------*/
 
@@ -173,7 +194,7 @@ header {
 
 @media screen and (max-width: 600px) {
     .services_second_block {
-        display: flexs;
+        display: flex;
         flex-direction: column;
     }
 }
@@ -185,5 +206,12 @@ header {
     .burger_menu {
         display: block;
         font-size: 28px;
+    }
+
+    .some_text {
+        flex-direction: column;
+    }
+    .some_text_right_side {
+        margin: 30px 0;
     }
 }
