--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    /* font-family: DarDarker Grotesque serif; */
 }
 
 button {
@@ -19,6 +20,9 @@ header {
     justify-content: space-between;
     background-color: #fff;
     padding: 10px;
+    position: fixed;
+    width: 100%;
+    z-index: 5;
 }
 
 .header_logo {
@@ -157,6 +161,7 @@ header {
     position: relative;
     top: 0;
     left: 0;
+    cursor: pointer;
 }
 
 .box_name {
@@ -202,9 +207,11 @@ header {
     display: flex;
     background-color: #fff;
     padding: 60px;
+    min-height: 100%;
 }
 
 .some_text_left_side {
+    display: flex;
     flex: 1.35;
     font-size: 2.1rem;
 }
@@ -325,8 +332,6 @@ header {
 .dr_content_wrapper {
     display: flex;
     background-color: #fff;
-    flex-basis: 100%;
-    flex: 1;
 }
 
 .dr_content_left_side {
@@ -346,6 +351,7 @@ header {
     flex-direction: column;
     margin-left: 1em;
 }
+
 .dr_image {
     width: 50px;
     height: 50px;
@@ -359,14 +365,18 @@ header {
 
 .dr_content_right_side {
     flex: 2.75;
-    display: -ms-flexbox;
 }
 
 .dr_content_right_side_inner {
     padding: 120px;
     line-height: 1.5em;
     font-size: 2em;
+}
+
+.dr_content_right_side_inner_text {
     font-style: italic;
+    color: #595977;
+    font-size: .9em;
 }
 
 /*----------------------------------INFO BLOCKS ----------------------------------------*/
@@ -377,6 +387,7 @@ header {
     width: 100%;
     flex-wrap: wrap;
     flex-shrink: 0;
+    overflow: hidden;
 }
 
 .info_block {
@@ -384,15 +395,13 @@ header {
     flex-direction: column;
     width: 20%;
     border: 1px solid silver;
+    flex-shrink: 1;
+    transition: 0.3s all ease;
+    cursor: pointer;
 }
- 
-.info_block:not(:first-child){
-    /* margin-left: 1px; */
-} 
 
 .info_block_img {
     overflow: hidden;
-    /* height: 13em; */
     flex: 1 1 auto;
 }
 
@@ -431,7 +440,8 @@ header {
 }
 
 .info_block:hover {
-    /* transform: scale(1.01); */
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
+    transform: scale(1.01);
 }
 
 /*----------------------------------ADDRESS COMPANY------------------------------------*/
@@ -440,12 +450,13 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #595977;
+    background-color: #595977; 
 }
 
 .address_company_img {
     background-image: url("./images/Google-Maps-copy.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
     height: 7em;
     overflow: hidden;
     width: 100%;
@@ -456,6 +467,7 @@ header {
     width: 100%;
     object-fit: cover;
 }
+
 .address_company_btn {
     display: flex;
     padding: 0 100px;
@@ -525,6 +537,7 @@ header {
     .services_inner {
         display: flex;
         flex-direction: column;
+        display: block;
     }
     
     .services_second_block {
@@ -556,7 +569,9 @@ header {
     }
     
     .some_text {
+        display: block;
         flex-direction: column;
+        -ms-flex-direction: column;
     }
     
     .some_text_right_side {
@@ -565,6 +580,14 @@ header {
 
     .info_block {
         width: 50%;
+    }
+    
+    .service_box_in_hover {
+        font-size: 0.7em;
+    }
+
+    .dr_content_right_side_inner {
+        padding: 40px;
     }
 }
 
@@ -581,10 +604,16 @@ header {
 
     .dr_content_wrapper {
         flex-direction: column;
+        -ms-flex-direction: column;
+        display: block;
+        min-height: 100%;
+        padding: 0;
     }
 
     .dr_content_left_side {
         justify-content: center;
+        /* margin-top: 50px; */
+        padding-top: 50px;
     }
 
     .info_block {
@@ -593,6 +622,10 @@ header {
 
     .info_block_img > img {
         width: 100%;
+    }
+    
+    .service_box {
+        
     }
 
 }
