--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    /* font-family: DarDarker Grotesque serif; */
 }
 
 button {
@@ -92,7 +91,6 @@ header {
     margin-top: 40px;
 }
 
-
 /*----------------------------------SERVICES------------------------------------------*/
 /*---------------------------------Service first block----------------------------*/
 
@@ -159,8 +157,6 @@ header {
     background-color: #fff;
     flex: 1;
     position: relative;
-    top: 0;
-    left: 0;
     cursor: pointer;
 }
 
@@ -195,6 +191,7 @@ header {
 
 .service_box > h3 {
     margin-top: 10px;
+    text-align: center;
 }
 
 .service_box:hover .service_box_in_hover {
@@ -224,6 +221,7 @@ header {
     margin: 0 50px;
     line-height: 1.5;
     font-size: 1.5rem;
+    color: #595977;
 }
 
 /*----------------------------------Images wrapper-----------------------------------------*/
@@ -556,9 +554,11 @@ header {
     .info_block {
         width: 33%;
     }
+
 }
 
 @media screen and (max-width: 900px) {
+
     .nav_list {
         display: none;
     }
@@ -612,7 +612,6 @@ header {
 
     .dr_content_left_side {
         justify-content: center;
-        /* margin-top: 50px; */
         padding-top: 50px;
     }
 
@@ -625,8 +624,14 @@ header {
     }
     
     .service_box {
-        
+        flex-wrap: wrap;
+        flex-direction: column;
+        -ms-flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
-
+    .service_box > img {
+        display: block;
+    }
 }
 
